adding more infrastructure for passing in the ERB bindings

--- a/styles/development.tex.erb
+++ b/styles/development.tex.erb
@@ -48,7 +48,7 @@
 
 \end{flushleft}
 
-<% if @abstract and !@abstract.blank? %>
+<% if @abstract && !@abstract.empty? %>
 \section*{Abstract}
 <%=@abstract%>
 <% end %>
