--- a/styles/jxb.tex.erb
+++ b/styles/jxb.tex.erb
@@ -49,7 +49,7 @@
 <% end %>
 \end{flushleft}
 
-<% if @abstract and !@abstract.blank? %>
+<% if @abstract && !@abstract.empty? %>
 \section*{Abstract}
 <%=@abstract%>
 <% end %>
