--- a/styles/plos.tex.erb
+++ b/styles/plos.tex.erb
@@ -63,7 +63,7 @@
 
 % Please keep the abstract between 250 and 300 words
 
-<% if @abstract and !@abstract.blank? %>
+<% if @abstract && !@abstract.empty? %>
 \section*{Abstract}
 <%=@abstract%>
 <% end %>
