--- a/styles/plos2015.tex.erb
+++ b/styles/plos2015.tex.erb
@@ -223,7 +223,7 @@
 
 \end{flushleft}
 % Please keep the abstract below 300 words
-<% if @abstract and !@abstract.blank? %>
+<% if @abstract && !@abstract.empty? %>
 \section*{Abstract}
 <%=@abstract%>
 <% end %>
