--- a/styles/sciadvances.tex.erb
+++ b/styles/sciadvances.tex.erb
@@ -90,7 +90,7 @@
 
 \maketitle
 
-<% if @abstract and !@abstract.blank? %>
+<% if @abstract && !@abstract.empty? %>
 
 \begin{sciabstract}
 <%=@abstract%>
