typesetting pass check of styles; updated README

--- a/styles/authorea-double-numbered.tex.erb
+++ b/styles/authorea-double-numbered.tex.erb
@@ -4,6 +4,7 @@
 \usepackage{setspace}
 \usepackage{titlesec}
 \usepackage{lineno}
+\usepackage{graphicx}
 \usepackage{xcolor}
 \usepackage[colorlinks = true,
             linkcolor = blue,
