--- a/styles/authorea-double.tex.erb
+++ b/styles/authorea-double.tex.erb
@@ -3,6 +3,7 @@
 \usepackage{parskip}
 \usepackage{setspace}
 \usepackage{titlesec}
+\usepackage{graphicx}
 \usepackage{xcolor}
 \usepackage[colorlinks = true,
             linkcolor = blue,
