--- a/styles/authorea-numbered.tex.erb
+++ b/styles/authorea-numbered.tex.erb
@@ -2,6 +2,7 @@
 \usepackage{fullpage}
 \usepackage{parskip}
 \usepackage{titlesec}
+\usepackage{graphicx}
 \usepackage{xcolor}
 \usepackage{lineno}
 \usepackage[colorlinks = true,
