--- a/styles/authorea.tex.erb
+++ b/styles/authorea.tex.erb
@@ -2,6 +2,7 @@
 \usepackage{fullpage}
 \usepackage{parskip}
 \usepackage{titlesec}
+\usepackage{graphicx}
 \usepackage{xcolor}
 \usepackage[colorlinks = true,
             linkcolor = blue,
